fix npe since List.of() check all elements for null ((JMenu)c).getMenuComponents() problem on mac